# matrix-client-rs

./: .mailmap  Cargo.toml  Makefile  README.md
once_cell2/: Cargo.toml
once_cell2/src/: lib.rs
src/: aes_hmac_sha2.rs  controller.rs  e2e_keys_backup.rs  http_client.rs  main.rs  state.rs  std2.rs  view.rs
