[package]
name = "matrix-client"
version = "0.1.0"
edition = "2021"


[dependencies]
aes = { version = "0.8", default-features = false }
anyhow = { version = "1", default-features = false, features = [
	"std",
] }
base64 = { version = "0.13", default-features = false, features = [
	"std",
] }
bs58 = { version = "0.4", default-features = false, features = [
	"std",
] }
chrono = { version = "0.4", default-features = false, features = [
	"clock", # for chrono::Utc::now()
	"serde", # for chrono::serde
] }
clap = { version = "3", default-features = false, features = [
	"derive", # for #[derive(clap::Parser)]
	"std", # "`std` feature is currently required to build `clap`"
] }
ctr = { version = "0.9", default-features = false }
dirs = { version = "4", default-features = false }
hkdf = { version = "0.12", default-features = false }
hmac = { version = "0.12", default-features = false, features = [
	"std",
] }
http = { version = "0.2", default-features = false }
hyper = { version = "0.14", default-features = false, features = [
	"http1",
	"client",
] }
hyper-rustls = { version = "0.23", default-features = false, features = [
	"http1",
	"tls12",
	"webpki-tokio",
] }
nix = { version = "0.23", default-features = false }
pbkdf2 = { version = "0.10", default-features = false }
pem = { version = "1", default-features = false }
rpassword = { version = "5", default-features = false }
serde = { version = "1", default-features = false, features = [
	"derive",
] }
serde_json = { version = "1", default-features = false, features = ["std"] }
sha2 = { version = "0.10", default-features = false }
tempfile = { version = "3", default-features = false }
thiserror = { version = "1", default-features = false }
tokio = { version = "1", default-features = false, features = [
	"rt",
	"time",
] }

once_cell2 = { path = "./once_cell2" }


[workspace]
