[package]
name = "matrix-client"
version = "0.1.0"
license = "AGPL-3.0-only"
authors = ["Arnav Singh <me@arnavion.dev>"]
edition = "2021"
publish = false


[dependencies]
anyhow = { version = "1.0.14", default-features = false, features = [
	"std",
] }
chrono = { version = "0.4.20", default-features = false, features = [
	"clock", # for chrono::Utc::now()
	"serde", # for chrono::serde
] }
clap = { version = "4", default-features = false, features = [
	"derive", # for #[derive(clap::Parser)]
	"std", # "`std` feature is currently required to build `clap`"
] }
dirs = { version = "5", default-features = false }
http = { version = "1", default-features = false }
http-body-util = { version = "0.1", default-features = false }
hyper = { version = "1", default-features = false }
hyper-rustls = { version = "0.27", default-features = false, features = [
	"http1",
	"ring",
	"tls12",
	"webpki-roots",
] }
hyper-util = { version = "0.1", default-features = false, features = [
	"client",
	"client-legacy",
	"http1",
	"tokio",
] }
nix = { version = "0.29", default-features = false, features = [
	"fs", # for nix::sys::stat, nix::unistd::mkfifo
	"hostname", # for nix::unistd::gethostname
	"process", # for nix::unistd::Pid
] }
rpassword = { version = "7", default-features = false }
serde = { version = "1.0.103", default-features = false, features = [
	"derive",
] }
serde_json = { version = "1", default-features = false, features = ["std"] }
sha2 = { version = "0.10", default-features = false }
tempfile = { version = "3", default-features = false }
terminal = { git = "https://github.com/Arnavion/terminal", branch = "main" }
thiserror = { version = "2", default-features = false }
tokio = { version = "1", default-features = false, features = [
	"rt",
	"time",
] }


[lints.rust]
rust_2018_idioms = "deny"
warnings = "deny"


[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
default_trait_access = "allow"
similar_names = "allow"
let_unit_value = "allow"
too_many_lines = "allow"
